@@ -1,1 +1,1 @@
-{'Subscribe comment'|i18n( 'ezcomments/comment/activationnotification' )} - {$contentobject.name}
+{'Activate your subscription'|i18n( 'ezcomments/comment/activationnotification' )} - {$contentobject.name}
