@@ -9,7 +9,7 @@ There are updates from <a href={$contentobject.main_node.url_alias}>{$contentobj
 </p>
 <br />
 <p>
-For reply the content, please visit 
+To reply the content, please visit 
 <a href="{concat( $base_url, '/', $contentobject.main_node.url_alias )}">
   {concat( $base_url, '/', $contentobject.main_node.url_alias )}
 </a>
@@ -19,7 +19,6 @@ For setting your subscription, please visit
     {concat( $base_url, '/comment/setting/', $subscriber.hash_string )}
 </a>
 <br /><br />
-Email sent to {$subscriber.email}
 </p>
 
 {undef $base_url}
