@@ -1,1 +1,1 @@
-New comment - {$contentobject.name}
+{'New comment'|i18n( 'ezcomments/comment/notification' )} - {$contentobject.name}
